--- a/src/main/resources/assets/all-in-one-stone-tools/lang/en_us.json
+++ b/src/main/resources/assets/all-in-one-stone-tools/lang/en_us.json
@@ -1,4 +1,10 @@
 {
   "item.all-in-one-stone-tools.pink_garnet": "Pink Garnet",
-  "item.all-in-one-stone-tools.raw_pink_garnet": "Raw Pink Garnet"
+  "item.all-in-one-stone-tools.raw_pink_garnet": "Raw Pink Garnet",
+
+  "block.all-in-one-stone-tools.pink_garnet_block": "Block of Pink Garnet",
+  "block.all-in-one-stone-tools.raw_pink_garnet_block": "Block of Raw Pink Garnet",
+
+  "itemgroup.all-in-one-stone-tools.pink_garnet_items": "Pink Garnet Items",
+  "itemgroup.all-in-one-stone-tools.pink_garnet_blocks": "Pink Garnet Blocks"
 }
